= Change Log

Below is a complete listing of changes for each revision of FasterCSV.

== 0.2.0

* Added VERSION constant.
* Significantly improved test speed.
* Worked around Date::parse bug so tests will pass on Windows.
* Documented test procedure.
* Made FasterCSV#lineno CSV aware.
* Added line numbers to MalformedCSVError messages.
* :headers can now be set to an Array of headers to use.
* :headers can now be set to an external CSV String of headers to use.
* Added an :unconvered_fields options, so those can be returned as well.

== 0.1.9

* Fixing the require "English" bug.

== 0.1.8

* Converted FasterCSV.filter() to use ARGF for input.
* Made FasterCSV.<<() aware of FasterCSV::Row objects.
* Switched header rows to include the unconverted headers as fields.
* Rescued IOError when trying to auto detect a line-ending on an output stream
  and used the default system line-ending.
* Added FasterCSV::Row.header_row?() and FasterCSV::Row.field_row?().

== 0.1.6

* Began using a forked development/stable versioning system.
* Reorganized initialization code for easier additions and maintenance.
* Added a check for unknown options.  Exceptions will now be thrown for them.
* Added built-in and custom data converters.  Built-in handle numbers and dates.
* Added Array#to_csv and String#parse_csv.  Both accept normal options.
* Project moved to RubyForge Subversion.
* Added auto-discovery for <tt>:row_sep</tt> (now the default).
* Added FasterCSV::filter() for easy Unix-like CSV filters.
* Added support for accessing fields by headers.
  * Headers can have their own converters.
  * Headers can be skipped or returned as needed.
  * FasterCSV::Row allows index or header access while retaining order and
    allowing for duplicate headers.

== 0.1.4

* Fixed <tt>:col_sep</tt> escaping bug (reported by Kev Jackson).
* Switched to the use of named parsers internally.

== 0.1.3

* Fixed typo in gem spec causing a require bug.

== 0.1.2
