@@ -15,3 +15,4 @@ require "tc_speed"
 require "tc_data_converters"
 require "tc_row"
 require "tc_headers"
+require "tc_serialization"
